fix filter on mobile version

--- a/src/components/Filter/filter.scss
+++ b/src/components/Filter/filter.scss
@@ -170,6 +170,7 @@
 .hidden {
     position: absolute;
     left: -20px;
+    top: -20px;
     padding-left: 20px;
     z-index: 55;
     animation: filter-in 0.5s ease-in-out;
